Return AbsPath from ProjectFilesystem.getRootPath
Summary:
No need to call `.toAbsolutePath` on it.

This change is mostly mechanical.

Reviewed By: bobyangyf

shipit-source-id: 383d95fa4454b86c1d28c7ade75bd2a14475980b